Resolved Alignment Issues

--- a/style.css
+++ b/style.css
@@ -7,35 +7,14 @@
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
 }
-/* Set the initial state of the element */
-
-
-/* Define the animation */
-@keyframes fade-in {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-/* Apply the animation to the element */
-.entry {
-  animation: fade-in 1s ease-out;
-}
 
 
 a {
   text-decoration: none;
 }
 .hero {
-  width: 100%;
-  height: 100vh;
+ height: 50rem;
 
-  background-size: cover;
 }
 nav {
   display: flex;
@@ -91,8 +70,12 @@ nav ul li a:hover:after {
   border-color: #fd4766;
   color: #fd4766;
 }
+.mix{
+  display: flex;
+}
 .content {
-  position: absolute;
+  margin-top: 10rem;
+  margin-left: 4rem;
   top: 35%;
   left: 8%;
 }
@@ -131,10 +114,11 @@ nav ul li a:hover:after {
 }
 .mai {
   height: 400px;
-  border: #fd4766;
+ border-radius: 10px;
   padding: auto;
-  margin-left: 950px;
-  margin-top: 150px;
+right: 0;
+position: absolute;
+margin-top: 150px;
  
 
 }
@@ -142,7 +126,7 @@ nav ul li a:hover:after {
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 50px;
+  padding: 45px;
 }
 
 .row {
@@ -176,23 +160,33 @@ nav ul li a:hover:after {
   transition: transform 0.3s ease-in-out;
  
 }
-
+.btn-abt{
+  margin-top: 30px;
+    right: 2%;
+    position: absolute;
+    font-size:2.5rem;
+    opacity: 50%;
+}
+.btn-abt:hover
+{
+  opacity: 100%;
+}
 #about {
   text-align: center;
-  padding: 50px;
+  
  
 }
 
 #about h2 {
   font-size: 36px;
-  margin-bottom: 20px;
+
   font-family: 'Courier New', Courier, monospace;
   
   color: #1f1f25;
   text-transform: uppercase;
   letter-spacing: 4px;
   display: inline-block;
-  margin-bottom: 20px;
+
   background: linear-gradient(
     120deg,
     #1c99fe 20.69%,
@@ -214,7 +208,7 @@ nav ul li a:hover:after {
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 50px;
+  padding: 45px;
 }
 
 .row {
@@ -310,7 +304,8 @@ img:hover {
 .btn-edu {
   
   font-size: 40px;
-  margin-left: 134%;
+  right: 2%;
+  position: absolute;
   opacity: 50%;
   
 }
@@ -351,7 +346,7 @@ input[type=submit]:hover {
   margin-top: 6px;
   padding: 20px;
 }
-background {
+.background {
   will-change: transform;
   transition: transform 450ms;
 }
@@ -385,6 +380,10 @@ background {
   margin-left: 30px;
   margin-top: 8px;
 }
+
+#project{
+  margin-top: 5.5rem;
+}
 .progress-bar .progress {
   background-color: #4caf50;
   height: 100%;
@@ -409,7 +408,8 @@ background {
 .btn-last {
   
   font-size: 40px;
- margin-left: 110%;
+right: 2%;
+position: absolute;
  opacity: 50%;
   
 }
@@ -422,8 +422,10 @@ background {
   font-size: 40px;
   margin-left: 100%;
  opacity: 50%;
+
   
 }
 .btn-about:hover{
   opacity: 100%;
 }
+
